tests/algorithms/x/Kotlin/neural_network/activation_functions/soboleva_modified_hyperbolic_tangent.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/neural_network/activation_functions/soboleva_modified_hyperbolic_tangent.kt:34:29: error: unresolved reference: to_float
        term = (term * x) / to_float(n)
                            ^
